# CookieBOT

./: .gitignore  README.md  dbhandler.py  main.py  pyproject.toml  requirements.txt  utils.py
bot/cogs/: counting.py  economy.py  flagguess.py  games.py  guess_number.py  level.py  memes.py  moderation_log.py  one_word.py  reactionrole.py  temp_voice.py  utility.py
bot/core/: bot.py
bot/db/: handler.py
bot/utils/: helpers.py  pagination.py  temp_voice_ui.py
cogs/: counting.py  flagguess.py  games.py  guess_number.py  memes.py  one_word.py  temp_voice.py  temp_voice_ui.py  wordle.py
config/: config-template.cfg
data/: commands.yml  wordle_words.json
template/: config-template.cfg
