[project]
name = "cookiebot"
version = "0.1.0"
description = "Discord Bot for the CookieClan Discord Server"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.13.5",
    "ezcord>=0.7.5",
    "py-cord>=2.7.1",
    "simpleeval>=1.0.7",
    "tzdata>=2025.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
